# seed-split

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/math/: field.rs  lagrange.rs  mod.rs
