[package]
name = "seed-split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
subtle = "2.4.1"
structopt = "0.3.26"

[dev-dependencies]
proptest = "1.0.0"
